# timekv

./: .gitignore  README.md  data_model.py  script.sh  zip_data.py
src/: .clang-format  CMakeLists.txt  main.cpp
src/Main/: Memtable.java  Memtable_interface.java
src/Main/column/: StoredAggregationType.java
src/Main/model/: ArrayList.java  Duration.java  Options.java  ReadResult.java  TimeRange.java  TimeRecord.java
src/level/: level.cpp  level.h
src/make/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  performance.txt  tskv  tskv-test[1]_include.cmake  tskv-test[1]_tests.cmake
src/make/.cache/clangd/index/: gmock-actions.h.60044A9723BF61E7.idx  gmock-all.cc.E9997562A4ACCCFB.idx  gmock-cardinalities.cc.59C0CCCADA846D73.idx  gmock-cardinalities.h.ACFBEAA577CE5E71.idx  gmock-function-mocker.h.6F2D1B0ED6F9D593.idx  gmock-generated-actions.h.28DD1485A7CFDA04.idx  gmock-internal-utils.cc.7BACB09DFB25B8E7.idx  gmock-internal-utils.h.617E851FC72166DA.idx  gmock-matchers.cc.3A1B694AD0983003.idx  gmock-matchers.h.86DBE661AF482C77.idx  gmock-matchers.h.A6958216B6E11D95.idx  gmock-more-actions.h.E28B2AC0D1F1D393.idx  gmock-more-matchers.h.2ACE91311A9A0608.idx  gmock-nice-strict.h.E43C45A1711AB8D9.idx  gmock-port.h.A39267005EE9A3A5.idx  gmock-port.h.F51D32A1DCDE3EF8.idx  gmock-pp.h.B07207CF456C0B62.idx  gmock-spec-builders.cc.54B71E8704EFFB22.idx  gmock-spec-builders.h.65DAC741E191B8BD.idx  gmock.cc.2718F0E2191BCD58.idx  (+37 more)
src/memtable/: memtable.cpp  memtable.h
src/metric-storage/: metric_storage.cpp  metric_storage.h
src/model/: aggregations.cpp  aggregations.h  column.cpp  column.h  model.cpp  model.h
src/persistent-storage/: disk_storage.cpp  disk_storage.h  persistent_storage.h  persistent_storage_manager.cpp  persistent_storage_manager.h
src/proto/: CMakeLists.txt  ydb_keyvalue.proto  ydb_operation.proto
src/storage/: storage.cpp  storage.h
src/tests/: column_test.cpp  level_test.cpp  memtable_test.cpp
(+3 files in other folders)
